# psql_to_mongo_extension

./: .gitignore  CMakeLists.txt  PGMakefile
pg_recvlogical/: CMakeLists.txt
pg_recvlogical/include/pg_recvlogical/: pg_recvlogical.h
pg_recvlogical/src/pg_recvlogical/: pg_recvlogical.c  receivelog.c  streamutil.c  streamutil.h
psql_mongo_replication/: CMakeLists.txt
psql_mongo_replication/include/psql_mongo_replication/: mongo_replication.hpp  psql_mongo_replication.hpp  psql_to_mongo_c_to_cpp_call_api.h
psql_mongo_replication/src/: main.cpp  stdafx.hpp
psql_mongo_replication/src/psql_mongo_replication/: mongo_replication.cpp  mongo_replication.hpp  psql_mongo_replication.cpp  psql_to_mongo_c_to_cpp_call_api.cpp
psql_mongo_replication_extention/: Makefile  psql_mongo_replication_extention--0.0.1.sql  psql_mongo_replication_extention.bc  psql_mongo_replication_extention.c  psql_mongo_replication_extention.control
psql_recv_logical/src/: pg_recvlogical.c
psql_to_mongo/: Makefile  psql_to_mongo--0.0.1.sql  psql_to_mongo.bc  psql_to_mongo.control
psql_to_mongo/include/psql_to_mongo/: psql_to_mongo.h
psql_to_mongo/src/: psql_to_mongo.c
